--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,24 +1,61 @@
-<p>home works!</p>
+<section class="first">
+    <div class="paneltitle"> <!-- pannello che contiene titolo e prima immagine -->
+        <div class="CRMtitle">
+            <h1>Car Rental Maggioli</h1> <!-- titolo  -->
+        </div>
 
+        <div class="logo">
+            <img src="https://www.autotecnica.org/wp-content/uploads/2017/12/160915_Fiat_Panda_001.jpg" alt="">
+        </div> <!-- immagine home  -->
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci qui autem sit perspiciatis. Labore officia non praesentium veniam earum quia illum sint iste harum. Reprehenderit eligendi repellat eos distinctio a!
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nostrum vero ab ex nesciunt commodi in sint expedita odio eius mollitia quaerat aliquam reiciendis deserunt, porro praesentium iusto error possimus.
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet totam, nisi cupiditate enim sed sit cumque optio illo ad vel, quaerat delectus? Tempora quis quod obcaecati asperiores. Magni, quae itaque!
+    </div>
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci qui autem sit perspiciatis. Labore officia non praesentium veniam earum quia illum sint iste harum. Reprehenderit eligendi repellat eos distinctio a!
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nostrum vero ab ex nesciunt commodi in sint expedita odio eius mollitia quaerat aliquam reiciendis deserunt, porro praesentium iusto error possimus.
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet totam, nisi cupiditate enim sed sit cumque optio illo ad vel, quaerat delectus? Tempora quis quod obcaecati asperiores. Magni, quae itaque!
+</section>
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci qui autem sit perspiciatis. Labore officia non praesentium veniam earum quia illum sint iste harum. Reprehenderit eligendi repellat eos distinctio a!
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nostrum vero ab ex nesciunt commodi in sint expedita odio eius mollitia quaerat aliquam reiciendis deserunt, porro praesentium iusto error possimus.
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet totam, nisi cupiditate enim sed sit cumque optio illo ad vel, quaerat delectus? Tempora quis quod obcaecati asperiores. Magni, quae itaque!
+<section>
+    <div class="panelcat"> <!-- pannello che contiene categorie  -->
+        <div class="categorie"> <!-- categorie  -->
+            <h2>Le categorie</h2>
+        </div>
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci qui autem sit perspiciatis. Labore officia non praesentium veniam earum quia illum sint iste harum. Reprehenderit eligendi repellat eos distinctio a!
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nostrum vero ab ex nesciunt commodi in sint expedita odio eius mollitia quaerat aliquam reiciendis deserunt, porro praesentium iusto error possimus.
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet totam, nisi cupiditate enim sed sit cumque optio illo ad vel, quaerat delectus? Tempora quis quod obcaecati asperiores. Magni, quae itaque!
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci qui autem sit perspiciatis. Labore officia non praesentium veniam earum quia illum sint iste harum. Reprehenderit eligendi repellat eos distinctio a!
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nostrum vero ab ex nesciunt commodi in sint expedita odio eius mollitia quaerat aliquam reiciendis deserunt, porro praesentium iusto error possimus.
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet totam, nisi cupiditate enim sed sit cumque optio illo ad vel, quaerat delectus? Tempora quis quod obcaecati asperiores. Magni, quae itaque!
+        <div class="autoCont">
+            <div class="autocat suv">
+                <h4>Suv</h4>
+                <!-- manca link a sezione auto  -->
+            </div>
+
+            <div class="autocat cabrio">
+                <h4>Cabrio</h4>
+                <!-- manca link a sezione auto  -->
+            </div>
+
+            <div class="autocat supercar">
+                <h4>Supercar</h4>
+                <!-- manca link a sezione auto  -->
+            </div>
+
+            <div class="autocat van">
+                <h4>Van</h4>
+                <!-- manca link a sezione auto  -->
+            </div>
+
+            <div class="autocat berlina">
+                <h4>Berline</h4>
+                <!-- manca link a sezione auto  -->
+            </div>
+
+            <div class="autocat bassocosto">
+                <h4>Da poveri</h4>
+                <!-- manca link a sezione auto  -->
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<div class="panelsedi">
+
+</div>
 
 <div id="chi_siamo">
     ciao
