--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,14 +3,21 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: black;
+    box-shadow: 0 0 30px #000000;
+    opacity: 0.67;
+    height: var(--header-h);
+    transition: 0.3s;
 }
 
 li {
     float: left;
+    height: var(--header-h);
 }
 
 li a {
+    height: var(--header-h);
+    opacity: 1;
     display: block;
     color: white;
     text-align: center;
@@ -19,7 +26,10 @@ li a {
     text-transform: capitalize;
     /* text-transform: uppercase; */
 }
-
-li a:hover {
-    background-color: #111;
+ul:hover
+{
+    opacity: 0.9;
+}
+li:hover {
+    background-color: red
 }
