--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,24 +1,44 @@
+.first, h1
+{
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* margin-bottom: 500px; */
+}
+
+h1 {
+    font-size: 7vw;
+}
+p {
+    font-size: 3vw;
+}
+
+.CRMtitle {
+    width: 66%;
+    padding: 1%;
+}
+
 .paneltitle {
-    margin-top: 100px;
-    box-sizing: border-box;
-    display: flex;
     width: 100%;
-    height: 100px;
-    background-color: red;
-    position: absolute;
-    top: 0;
-    bottom: 0;
+    /* padding: 15%; */
+    flex-direction: row-reverse;
     justify-content: space-between;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin-top: calc(-1 * var(--header-h));
+    background-color: red;
+    /* position: relative; */
+    /* top: 0;
+    bottom: 0; */
     z-index: -1;
 }
 
-.logo img{
-    width: 100px;
-    margin-right: 100%;
+.logo {
+    width: 33%;
 }
-
-section {
+.logo img{
     width: 100%;
-    height: 100px;
-    /* position: relative; */
+    padding: 10px;
+    /* margin-right: 100%; */
 }
