--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="first">
     <div class="paneltitle"> <!-- pannello che contiene titolo e prima immagine -->
         <div class="CRMtitle">
-            <h1>Car Rental Maggioli</h1> <!-- titolo  -->
+            <h1>car Rental Maggioli</h1> <!-- titolo  -->
         </div>
 
         <div class="logo">
@@ -15,7 +15,7 @@
 <section>
     <div class="panelcat"> <!-- pannello che contiene categorie  -->
         <div class="categorie"> <!-- categorie  -->
-            <h2>Le categorie</h2>
+            <h2>le categorie</h2>
         </div>
 
         <div class="autoCont">
@@ -52,6 +52,12 @@
     </div>
 
 </section>
+
+<div class="panelsedi">
+    <div class="nostresedi">
+        <h2>le nostre sedi</h2>
+    </div>
+</div>
 
 <div class="panelsedi">
 
