--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <section class="first">
     <div class="paneltitle"> <!-- pannello che contiene titolo e prima immagine -->
-        
+        <div class="bk"></div>
+        <div class="img"></div>
         <div class="CRMtitle">
 
             <h1>CAR RENTAL MAGGIOLI AUTO</h1> <!-- titolo  -->
