--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -6,10 +6,10 @@
 }
 
 h1 {
-    font-size: 7vw;
+    font-size: 6.5vw;
 }
 p {
-    font-size: 3vw;
+    font-size: 2.5vw;
 }
 
 .CRMtitle {
@@ -17,6 +17,13 @@ p {
     padding: 1%;
 }
 
+.bk{
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.297);
+    z-index: -1;
+}
 .paneltitle {
     width: 100%;
     /* padding: 15%; */
@@ -27,15 +34,27 @@ p {
     justify-content: center;
     align-items: center;
     margin-top: calc(-1 * var(--header-h));
-    background-color: red;
+    
+    z-index: 1;
+    color: white;
+    /* filter: brightness(.9); */
     /* position: relative; */
     /* top: 0;
     bottom: 0; */
-    z-index: -1;
+    /* z-index: -1; */
 }
 
+.img {
+    background-image: url("src/assets/gifsfondo.gif");
+    background-repeat: no-repeat;
+    background-size:cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+}
 .logo {
-    width: 33%;
+    width: 30%;
 }
 .logo img{
     width: 100%;
