Modifica all'header e nuova gif

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -32,5 +32,9 @@ ul:hover
     opacity: 0.9;
 }
 li:hover {
-    background-color: red
+    background-color: var(--main-color);
+}
+
+li:hover * {
+    color: black;
 }
