--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<div id="su"></div>
 <section class="first">
     <div class="paneltitle"> <!-- pannello che contiene titolo e prima immagine -->
         <div class="bk"></div>
@@ -9,7 +10,7 @@
         </div>
 
     </div>
-
+    <div id="su"></div>
 </section>
 
 <section>
@@ -34,9 +35,29 @@
 </div>
 
 <div class="panelsedi">
-
+    <div class="infosedi">
+        <h3>
+            Paese: Santarcangelo di Romagna RN<br>Via: Via Emilia, 1609<br>Email: carrentalmaggioli.assistenza@gmail.com <br>Tel: +39 3927374863 
+        </h3>
+    </div>
+    <div class="googlemaps">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2866.9138820227286!2d12.458364715265791!3d44.0644868791094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132cc199fcd87cab%3A0x6a3977549962ef8d!2sMaggioli%20Academy!5e0!3m2!1sit!2sit!4v1676534096089!5m2!1sit!2sit" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
 </div>
 
 <div id="chi_siamo">
-    ciao
+    <div class="chisiamotit">
+        <h2>
+            chi siamo
+        </h2>
+        <p>
+            Di Lena Marco<br>
+            Ispani Filippo<br>
+            Geminiani Leonardo<br>
+            Lombardi Guglielmo
+        </p>
+    </div>
+    <div class="footer">
+        Copyright © 2023 AutoNoleggioMaggioli.com Transport Limited. Tutti i diritti riservati. - <a href="/#su">Torna su</a>
+    </div>
 </div>
