--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,7 +4,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: black;
-    box-shadow: 0 0 30px #000000;
+    box-shadow: 0 0 30px black;
     opacity: 0.67;
     height: var(--header-h);
     transition: 0.3s;
@@ -25,7 +25,7 @@ li a {
     padding: 14px 16px;
     text-decoration: none;
     text-transform: capitalize;
-    /* text-transform: uppercase; */
+    text-transform: uppercase;
 }
 ul:hover
 {
