--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
     --header-h: 60px;
-    --main-color: lightblue;
+    --main-color: #2bd8e4;
 }
