--- a/src/app/components/auto/auto.component.html
+++ b/src/app/components/auto/auto.component.html
@@ -76,6 +76,7 @@
                 <td>
                     {{r.prezzo}}
                 </td>
+                <app-auto-modal [auto]="r"></app-auto-modal>
             </tr>
         </tbody>
     </table>
