--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -47,18 +47,11 @@ p {
     /*top: 0;*/
     /* z-index: -1; */
 }
-.panelcat
-{
-    background-color: white;
-}
-
 .autoCont
 {
-    position: relative;
     width: 100%;
     text-align: center;
     justify-content: space-between;
-    display: flex;
     height: 100vh;
     align-items: center;
     margin-top: calc(-1 * var(--header-h));
@@ -69,8 +62,17 @@ p {
 {
     border-radius: 20px;
 }
+#cat:hover
+{
+    box-shadow: 0px 0px 25px black;
+    border-radius: 20px;
+    overflow: hidden;
+    object-fit: fill;
+    scale: 1.2;
+}
 #categorie
 {
+    color: var(--main-color);
     text-align: center;
     text-transform: uppercase;
     padding: 10px 10px;
@@ -104,15 +106,21 @@ p {
 .autoCont {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    height: 440px;
 }
 
 .autoCont > * {
-    width: 100px;
-    height: 100px;
-    background-color: red;
+    width: calc(100% / 3);
+    padding: 10px;
+    box-sizing: border-box;
+    flex-grow: 1;
+   height: 200px;
 }
 
-.autoCont > *:hover{
-    background-color: brown;
+.autoCont > * > div {
+    height: 200px;
+    background-color: beige;
+    border-radius: 20px;
 }
 
