--- a/src/app/components/auto-modale/auto-modale.component.html
+++ b/src/app/components/auto-modale/auto-modale.component.html
@@ -1,9 +1,6 @@
-<div id="myModal" class="modal">
-
-    <!-- Modal content -->
+<div id="myModal" class="modal" [style.display]="auto ? 'block': 'none'">
     <div class="modal-content">
-      <span class="close">&times;</span>
-      <p>Some text in the Modal..</p>
+        <span class="close" (click)="Close()">&times;</span>
+        <p>{{auto?.modello}}</p>
     </div>
-  
-  </div>
+</div>
