--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,13 @@
-<div id="su"></div>
+
 <section class="first">
+    <div id="su"></div>
     <div class="paneltitle"> <!-- pannello che contiene titolo e prima immagine -->
         <div class="bk"></div>
         <div class="img"></div>
         <div class="CRMtitle">
-
-            <h1>CAR RENTAL MAGGIOLI AUTO</h1> <!-- titolo  -->
+            <div class="titolo">
+                <h1>CAR RENTAL MAGGIOLI AUTO</h1> <!-- titolo  -->
+            </div>
             <p>Il più grande car rental d'italia</p>
         </div>
 
