--- a/src/app/components/auto-modale/auto-modale.component.html
+++ b/src/app/components/auto-modale/auto-modale.component.html
@@ -1,6 +1,6 @@
 <div id="myModal" class="modal" [style.display]="auto ? 'block': 'none'">
     <div class="modal-content">
         <span class="close" (click)="Close()">&times;</span>
-        <p>{{auto?.modello}}</p>
+        <p>{{auto?.descrizione}}</p>
     </div>
 </div>
