--- a/src/app/components/auto/auto.component.html
+++ b/src/app/components/auto/auto.component.html
@@ -1,83 +1,91 @@
 <link rel="stylesheet" href="auto.component.css">
 
-<div class="container my-4">
-    <form class="my-4">
-        <div class="form-group font">
-            <label for="exampleInputEmail1">Categoria</label>
-            <select class="form-select textbox" name="categorie"  [(ngModel)]="Categoria">
-                <option *ngFor="let r of this.categorie" [value]="r.indx">{{r.str}}</option>
-            </select>
-        </div>
+<div class="boxSx">
 
-        <div class="form-group font">
-            <label for="exampleInputPassword1">Marca</label>
-            <input name="Marca" [(ngModel)]="Marca" class="form-control textbox" id="exampleInputPassword1">
-        </div>
-
-        <div class="form-group font">
-            <label for="exampleInputPassword1">Modello</label>
-            <input name="Modello" [(ngModel)]="Modello" class="form-control textbox" id="exampleInputPassword1">
-        </div>
-
-        <div class="form-check d-flex justify-content-around w-50 font">
-            <div>
-                <input name="ordine" type="radio" class="form-check-input radioColor" id="exampleCheck1" [value]="0" [(ngModel)]="SelectedOr">
-                <label class="form-check-label" for="exampleCheck1">Prezzo crescente</label>
+    <div class="container my-4">
+        <form class="my-4">
+            <div class="form-group font">
+                <label for="exampleInputEmail1">Categoria</label>
+                <select class="form-select textbox" name="categorie" id="textUno" [(ngModel)]="Categoria">
+                    <option *ngFor="let r of this.categorie" [value]="r.indx">{{r.str}}</option>
+                </select>
             </div>
-            <div>
-                <input name="ordine" type="radio" class="form-check-input radioColor" id="e" [value]="1" [(ngModel)]="SelectedOr">
-                <label class="form-check-label" for="e">Prezzo decrescente</label>
+    
+            <div class="form-group font" id="textDue">
+                <label for="exampleInputPassword1">Marca</label>
+                <input name="Marca" [(ngModel)]="Marca" class="form-control textbox" id="exampleInputPassword1">
             </div>
-            <div>
-                <input name="ordine" type="radio" class="form-check-input radioColor" id="s" [value]="2" [(ngModel)]="SelectedOr">
-                <label class="form-check-label" for="s">Alfabetico</label>
+    
+            <div class="form-group font" id="textTre">
+                <label for="exampleInputPassword1">Modello</label>
+                <input name="Modello" [(ngModel)]="Modello" class="form-control textbox" id="exampleInputPassword1">
             </div>
-        </div>
-
-        <div class="d-flex flex-row-reverse">
-            <a class="btn btn-primary font" id="btnFiltra" (click)="FormSubmit()">Filtra</a>
-        </div>
-    </form>
-
-    <table class="table font">
-        <thead>
-            <tr>
-                <th>
-                    Immagine
-                </th>
-                <th>
-                    Marca
-                </th>
-                <th>
-                    Modello
-                </th>
-                <th>
-                    Categoria
-                </th>
-                <th>
-                    Prezzo
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let r of this.autoList" (click)="OpenModal(r)" >
-                <td>
-                    <img [src]="r.immagine" [alt]="r.modello + 'IMG'">
-                </td>
-                <td>
-                    {{r.marca}}
-                </td>
-                <td>
-                    {{r.modello}}
-                </td>
-                <td>
-                    {{StringCategoria(r.categoria)}}
-                </td>
-                <td>
-                    {{r.prezzo}}
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <app-auto-modale (closeEvent)="CloseModal()" [auto]="AutoModalSelected"></app-auto-modale>
+    
+            <div class="form-check d-flex justify-content-around w-50 font">
+                <div id="radioUno">
+                    <input name="ordine" type="radio" class="form-check-input radioColor" id="exampleCheck1" [value]="0" [(ngModel)]="SelectedOr">
+                    <label class="form-check-label" for="exampleCheck1">Prezzo crescente</label>
+                </div>
+                <div id="radioDue">
+                    <input name="ordine" type="radio" class="form-check-input radioColor" id="e" [value]="1" [(ngModel)]="SelectedOr">
+                    <label class="form-check-label" for="e">Prezzo decrescente</label>
+                </div>
+                <div id="radioTre">
+                    <input name="ordine" type="radio" class="form-check-input radioColor" id="s" [value]="2" [(ngModel)]="SelectedOr">
+                    <label class="form-check-label" for="s">Alfabetico</label>
+                </div>
+            </div>
+    
+            <div class="d-flex flex-row-reverse">
+                <a class="btn btn-primary font" id="btnFiltra" (click)="FormSubmit()">Filtra</a>
+            </div>
+        </form>
+    </div>
 </div>
+
+    <div class="boxDx">
+        <table class="table font">
+            <thead>
+                <tr>
+                    <th>
+                        Immagine
+                    </th>
+                    <th>
+                        Marca
+                    </th>
+                    <th>
+                        Modello
+                    </th>
+                    <th>
+                        Categoria
+                    </th>
+                    <th>
+                        Prezzo
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let r of this.autoList" (click)="OpenModal(r)" >
+                    <td>
+                        <img [src]="r.immagine" [alt]="r.modello + 'IMG'">
+                    </td>
+                    <td>
+                        {{r.marca}}
+                    </td>
+                    <td>
+                        {{r.modello}}
+                    </td>
+                    <td>
+                        {{StringCategoria(r.categoria)}}
+                    </td>
+                    <td>
+                        {{r.prezzo}}
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <app-auto-modale (closeEvent)="CloseModal()" [auto]="AutoModalSelected"></app-auto-modale>
+    </div>
+
+
+
