--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+
 <section class="first">
     <div id="su"></div>
     <div class="paneltitle"> <!-- pannello che contiene titolo e prima immagine -->
@@ -16,7 +17,7 @@
 <section>
     <div class="panelcat"> <!-- pannello che contiene categorie  -->
         <div id="categorie"> <!-- categorie  -->
-            <h2>le categorie</h2>
+            <h2>le nostre categorie</h2>
         </div>
 
         <div class="autoCont">
