--- a/src/app/components/auto/auto.component.html
+++ b/src/app/components/auto/auto.component.html
@@ -23,21 +23,21 @@
     
             <div class="form-check d-flex justify-content-around w-50 font">
                 <div id="radioUno">
-                    <input name="ordine" type="radio" class="form-check-input radioColor" id="exampleCheck1" [value]="0" [(ngModel)]="SelectedOr">
+                    <input name="ordine" type="radio" class="form-check-input radio" id="exampleCheck1" [value]="0" [(ngModel)]="SelectedOr">
                     <label class="form-check-label" for="exampleCheck1">Prezzo crescente</label>
                 </div>
                 <div id="radioDue">
-                    <input name="ordine" type="radio" class="form-check-input radioColor" id="e" [value]="1" [(ngModel)]="SelectedOr">
+                    <input name="ordine" type="radio" class="form-check-input radio" id="e" [value]="1" [(ngModel)]="SelectedOr">
                     <label class="form-check-label" for="e">Prezzo decrescente</label>
                 </div>
                 <div id="radioTre">
-                    <input name="ordine" type="radio" class="form-check-input radioColor" id="s" [value]="2" [(ngModel)]="SelectedOr">
-                    <label class="form-check-label" for="s">Alfabetico</label>
+                    <input name="ordine" type="radio" class="form-check-input radio" id="s" [value]="2" [(ngModel)]="SelectedOr">
+                    <label class="form-check-label" for="s">Ordine alfabetico</label>
                 </div>
             </div>
     
             <div class="d-flex flex-row-reverse">
-                <a class="btn btn-primary font" id="btnFiltra" (click)="FormSubmit()">Filtra</a>
+                <a class="btn btn-primary font" id="btnFiltra"(click)="FormSubmit()">Filtra</a>
             </div>
         </form>
     </div>
