Fine categorie home css

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -18,6 +18,14 @@ p {
     /* padding: 1%; */
     padding:3.5%;
 }
+.titolo{
+    background: linear-gradient(to left,rgb(255, 255, 255), rgb(46, 169, 209));
+    background-size: cover;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
 .bk{
     width: 100%;
@@ -28,6 +36,71 @@ p {
     top:0;
     left:0;
 }
+.paneltitle {
+    width: 100%;
+    /* padding: 15%; */
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    display: flex;
+    height: 100vh;
+    justify-content: start;
+    align-items: flex-end;
+    
+    margin-top: calc(-1 * var(--header-h));
+    margin-bottom: 0;
+    z-index: 1;
+    color: lightblue;
+    /* -webkit-text-stroke: 2px black; */
+    /*text-shadow: 0 0 30px black;
+    /* filter: brightness(.9); */
+    /* position: relative; */
+    /*top: 0;*/
+    /* z-index: -1; */
+}
+.panelcat
+{
+    overflow: hidden;
+    padding-bottom: 100px;
+    padding-top: 60px;
+}
+.autoCont
+{
+    width: 100%;
+    text-align: center;
+    justify-content: space-between;
+    height: auto;
+    align-items: center;
+    margin-top: calc(-1 * var(--header-h));
+    margin-bottom: 0;
+    text-shadow: 0 0 30px black;
+}
+#cat
+{
+    border-radius: 20px;
+    
+}
+#cat:hover
+{
+    box-shadow: 0px 0px 25px black;
+    border-radius: 20px;
+    object-fit: fill;
+    scale: 1.1;
+    padding: 0;
+    transition: 0.3s;
+}
+#categorie
+{
+    color: black;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 10px 10px;
+    margin: 0PX 300px 0px;
+    background-color: red;
+    border-radius: 20px;
+    margin: 50px;
+    margin-bottom: 100px;
+}
+
 .img {
     /* background-image: url("https://thumbs.gfycat.com/ExhaustedIdioticBluejay.webp"); */
     background-image: url("src/assets/gifsfondo.gif");
@@ -57,77 +130,12 @@ p {
     height: 440px;
 }
 
-
-.paneltitle {
-    width: 100%;
-    /* padding: 15%; */
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    display: flex;
-    height: 100vh;
-    justify-content: start;
-    align-items: flex-end;
-    
-    margin-top: calc(-1 * var(--header-h));
-    margin-bottom: 0;
-    z-index: 1;
-    color: lightblue;
-    /* -webkit-text-stroke: 2px black; */
-    /*text-shadow: 0 0 30px black;
-    /* filter: brightness(.9); */
-    /* position: relative; */
-    /*top: 0;*/
-    /* z-index: -1; */
-}
-
-
-.autoCont
-{
-    width: 100%;
-    text-align: center;
-    justify-content: space-between;
-    height: auto;
-    display: flex;
-    align-items: center;
-    margin-top: calc(-1 * var(--header-h));
-    margin-bottom: 0;
-    text-shadow: 0 0 30px black;
-    flex-wrap: wrap;
-    overflow-x: hidden;
-}
-
-#cat
-{
-    border-radius: 20px;
-    margin-top: 100px;
-}
-#cat:hover
-{
-    box-shadow: 0px 0px 25px black;
-    border-radius: 20px;
-    overflow: hidden;
-    object-fit: fill;
-    scale: 1.1;
-    padding: 0;
-}
-#categorie
-{
-    color: black;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 10px;
-    margin: 50PX 300px 0px;
-    background-color: red;
-    border-radius: 20px;
-}
-
 .autoCont > * {
     width: calc(100% / 3);
     padding: 10px;
-    margin-bottom: 20px;
     box-sizing: border-box;
     flex-grow: 1;
-    height: 200px;
+   height: 200px;
 }
 
 .autoCont > * > div {
@@ -136,12 +144,3 @@ p {
     border-radius: 20px;
 }
 
-.titolo
-{
-    background: linear-gradient(to left,rgb(255, 255, 255), rgb(46, 169, 209));
-    background-size: cover;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
