--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -135,11 +135,28 @@ p {
     padding: 10px;
     box-sizing: border-box;
     flex-grow: 1;
-   height: 200px;
 }
 
 .autoCont > * > div {
     height: 200px;
     background-color: red;
     border-radius: 20px;
+}
+.panelsedi h2
+{
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+.panelsedi
+{
+    width: 100%;
+    height: 100vh;
+    margin-top: calc(-1 * var(--header-h));
+    margin-bottom: 0;
+    z-index: 1;
+    color: black;
+    background-color: red;
+    border-radius: 30px;
 }
