aggiunta scritta mobile

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,9 @@
             <div class="titolo">
                 <h1>CAR RENTAL MAGGIOLI AUTO</h1> <!-- titolo  -->
             </div>
-            <p>Il più grande car rental d'italia</p>
+            <div class="typewriter">
+                <h3>Il più grante car rental d'Italia</h3>
+              </div>
         </div>
 
     </div>
