--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -26,6 +26,30 @@ p {
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.typewriter h3 {
+    color: #fff;
+    font-family: monospace;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em lightblue; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(30, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: lightblue }
+  }
 
 .bk{
     width: 100%;
@@ -159,4 +183,13 @@ p {
     color: black;
     background-color: red;
     border-radius: 30px;
+}
+#chi_siamo
+{
+    width: 100%;
+    height: 100vh;
+    margin-top: calc(-1 * var(--header-h));
+    margin-bottom: 0;
+    z-index: 1;
+    color: black;
 }
