--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,6 @@
 
 <section class="first">
     <div class="paneltitle"> <!-- pannello che contiene titolo e prima immagine -->
-        <div id="su"></div>
         <div class="bk"></div>
         <div class="img"></div>
         <div class="CRMtitle">
@@ -61,6 +60,6 @@
         </p>
     </div>
     <div class="footer">
-        Copyright © 2023 AutoNoleggioMaggioli.com Transport Limited. Tutti i diritti riservati. - <a href="/#su">Torna su</a>
+        Copyright © 2023 AutoNoleggioMaggioli.com Transport Limited. Tutti i diritti riservati. - <a href="/#">Torna su</a>
     </div>
 </div>
