--- a/src/app/components/auto/auto.component.css
+++ b/src/app/components/auto/auto.component.css
@@ -1,63 +1,87 @@
-.font{
+.font {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: medium;
-    
+
+}
+
+.filtra {
+    height: min-content;
+    display: inline-block;
+    background-color: black;
+}
+
+label {
+    text-align: center;
+}
+
+.ordine {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ordine > * {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
 }
 
 td {
     overflow: wrap;
 }
 
-.radio{
-    box-shadow: 0 1px 2px rgba(0,0,0,0.20),
-inset 0px -15px 10px -12px rgba(0,0,0,0.20);
-width: 20px;
-height: 20px;
-padding: 10px;
+.radio {
+    /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.20),
+        inset 0px -15px 10px -12px rgba(0, 0, 0, 0.20); */
+    width: 20px;
+    height: 20px;
+    /* padding: 10px; */
 }
 
-.textbox{
+.textbox {
     /*background: linear-gradient(to right, rgb(236, 229, 229), grey);*/
     background-color: grey;
-    color : white;
+    color: white;
     border-radius: 10px;
     font-size: x-large;
 }
 
-.boxSx{
-    float : left;
+.boxSx {
+    float: left;
     /* margin-left : 5%; */
-    width: 40%;
+    width: 45%;
 
 }
 
-.boxDx{
-    float : right;
+
+.tCont {
+    padding-left: 30px;
+}
+
+.FormC {
+    padding-right: 30px;
+}
+
+
+
+.boxDx {
+    float: right;
     /* margin-right: 10%; */
-    margin-top : 5%;
-    width: 60%;
+    margin-top: 5%;
+    width: 55%;
     overflow: scroll;
+    overflow-x: visible;
     height: 65vh;
 }
 
-#radioUno, #radioDue, #radioTre{
-    padding: 20px;
-    margin-top: 20px;
+.boxcont {
+    margin: auto 3%;
 }
-
-#textUno, #textDue, #textTre{
-    margin-top: 20px;
-}
-
-
-#btnFiltra{
-    background-color: black;
-}
-
 .ordine {
     display: flex;
 }
 
-label{
+label {
     padding: 10px;
 }
