--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,3 @@
-
 <section class="first">
     <div class="paneltitle"> <!-- pannello che contiene titolo e prima immagine -->
         <div class="bk"></div>
@@ -9,11 +8,11 @@
             </div>
             <div class="typewriter">
                 <h3>Il più grante car rental d'Italia</h3>
-              </div>
+            </div>
         </div>
 
     </div>
-    
+
 </section>
 
 <section>
@@ -33,19 +32,23 @@
 
 </section>
 <section>
-<div class="panelsedi">
-    <div class="nostresedi">
-        <h2>le nostre sedi</h2>
+    <div class="panelsedi">
+        <div class="sediflex">
+            <div class="infosedi">
+                <div class="nostresedi">
+                    <h2>le nostre sedi</h2>
+                </div>
+                <h3>
+                    Paese: Santarcangelo di Romagna RN<br>Via: Via Emilia, 1609<br>Email:
+                    carrentalmaggioli.assistenza@gmail.com <br>Tel: +39 3927374863
+                </h3>
+            </div>
+            <div class="googlemaps">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2866.9138820227286!2d12.458364715265791!3d44.0644868791094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132cc199fcd87cab%3A0x6a3977549962ef8d!2sMaggioli%20Academy!5e0!3m2!1sit!2sit!4v1676534096089!5m2!1sit!2sit"></iframe>
+            </div>
+        </div>
     </div>
-    <div class="infosedi">
-        <h3>
-            Paese: Santarcangelo di Romagna RN<br>Via: Via Emilia, 1609<br>Email: carrentalmaggioli.assistenza@gmail.com <br>Tel: +39 3927374863 
-        </h3>
-    </div>
-    <div class="googlemaps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2866.9138820227286!2d12.458364715265791!3d44.0644868791094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132cc199fcd87cab%3A0x6a3977549962ef8d!2sMaggioli%20Academy!5e0!3m2!1sit!2sit!4v1676534096089!5m2!1sit!2sit" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-</div>
 </section>
 <section>
     <div class="chi_siamo">
@@ -53,7 +56,7 @@
             <h2 id="chi_siamotit">
                 chi siamo
             </h2>
-            <p id="par_chi_siamo" >
+            <p id="par_chi_siamo">
                 Di Lena Marco<br>
                 Ispani Filippo<br>
                 Geminiani Leonardo<br>
@@ -61,7 +64,8 @@
             </p>
         </div>
         <div class="footer">
-            Copyright © 2023 AutoNoleggioMaggioli.com Transport Limited. Tutti i diritti riservati. - <a href="/#">Torna su</a>
+            Copyright © 2023 AutoNoleggioMaggioli.com Transport Limited. Tutti i diritti riservati. - <a href="/#">Torna
+                su</a>
         </div>
-        </div>
+    </div>
 </section>
