Aggiunzione link pagine linked in

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -54,10 +54,10 @@
                 chi siamo
             </h2>
             <p id="par_chi_siamo" >
-                Di Lena Marco<br>
-                Ispani Filippo<br>
-                Geminiani Leonardo<br>
-                Lombardi Guglielmo
+                <a href="https://www.linkedin.com/in/marcodilena1905/" style="color: black;">Di Lena Marco</a><br>
+                <a href="https://www.linkedin.com/in/filippo-ispani-a7aa12266/" style="color: black;">Ispani Filippo</a><br>
+                <a href="https://www.linkedin.com/in/leonardo-geminiani-263753191/" style="color: black;">Geminiani Leonardo</a><br>
+                <a href="https://www.linkedin.com/in/guglielmo-lombardi-23566a265/" style="color: black;">Lombardi Guglielmo</a>
             </p>
         </div>
         <div class="footer">
