--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
                 <h1>CAR RENTAL MAGGIOLI AUTO</h1> <!-- titolo  -->
             </div>
             <div class="typewriter">
-                <h3>Il più grante car rental d'Italia</h3>
+                <h3>Il più grande car rental d'Italia</h3>
             </div>
         </div>
 
